# uncertainty-aware-hierarchical-medical-diagnosis-with-credal-sets

./: .gitignore  ARCHITECTURE.md  CHECKLIST.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  smoke_test.py  validate_project.py
configs/: ablation.yaml  default.yaml
results/: results.json
scripts/: evaluate.py  predict.py  train.py
src/uncertainty_aware_hierarchical_medical_diagnosis_with_credal_sets/: __init__.py
src/uncertainty_aware_hierarchical_medical_diagnosis_with_credal_sets/evaluation/: __init__.py  analysis.py  metrics.py
src/uncertainty_aware_hierarchical_medical_diagnosis_with_credal_sets/models/: __init__.py  components.py  model.py
src/uncertainty_aware_hierarchical_medical_diagnosis_with_credal_sets/training/: __init__.py  trainer.py
src/uncertainty_aware_hierarchical_medical_diagnosis_with_credal_sets/utils/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_data.py  test_model.py  test_training.py
